--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   },
   "dependencies": {
     "@google-cloud/vision": "^2.1.1",
+    "axios": "^0.19.2",
     "colorsys": "^1.0.22",
     "cookie-parser": "~1.4.4",
     "debug": "~2.6.9",
