--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "cookie-parser": "~1.4.4",
     "debug": "~2.6.9",
     "express": "~4.16.1",
-    "firebase": "^7.16.1",
+    "firebase-admin": "^9.0.0",
     "http-errors": "~1.6.3",
     "ip": "^1.1.5",
     "jade": "~1.11.0",
